<resources>
    <string name="app_name">My Quiz</string>
    <string name="password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>

    <string name="username_cannot_empty">Username cannot be empty</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="password_too_short">Password needs to be greater than 6 characters</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="old_password_cannot_be_empty">Old Password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New Password cannot be empty</string>
    <string name="confirm_new_password_cannot_be_empty">Confirm New Password cannot be empty</string>
    <string name="password_must_be_same">Password must be same</string>
    <string name="new_password_must_be_different">New Password must be different</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="email_not_valid">Email must be valid</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="email">Enter your Email</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="rule">Rule</string>
    <string name="history">History</string>
    <string name="menu">MENU</string>
    <string name="quiz_option">Quiz Subject</string>
    <string name="subject_management">Subject Management</string>
    <string name="quiz_management">Quiz Management</string>
    <string name="add_new_subject">Add New Subject</string>
    <string name="save">Save</string>
    <string name="new_quiz">Create New Quiz</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="subject_1">Subject</string>

    <string name="questions">Questions</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="create">Create</string>
    <string name="save_password">Save Password</string>
    <string name="literature">Literature</string>
    <string name="geography">Geography</string>
    <string name="math">Math</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="final_result">Final Result</string>
    <string name="subject">Subject :</string>
    <string name="correct">Correct :</string>
    <string name="incorrect">Incorrect :</string>
    <string name="earned">Earned :</string>
    <string name="total_questions">Total Questions :</string>
    <string name="overall_points">Overall Points :</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="literature_quiz">Literature Quiz</string>
    <string name="geography_quiz">Geography Quiz</string>
    <string name="date">Date :</string>
    <string name="start_again">Start Again!</string>
    <string name="quiz_upc">QUIZ</string>
    <string name="user_upc">USER</string>
    <string name="text_choose_app_vn">Choose Study Application</string>
    <string name="text_choose_quiz">Quiz Learning Application</string>
    <string name="text_choose_vocab">Vocabulary Learning Application</string>
    <string name="signup_register_button">Have account? <b>LOGIN NOW</b></string>
    <string name="confirm_password">Confirm your Password</string>
    <string name="phone_number">Enter your Phone Number</string>
    <string name="login_register_button">Dont have account? <b>SIGN UP NOW</b></string>

    <string name="full_name">Enter your Fullname</string>

    <string name="rules1_description">
        The Quiz will contain 5 randomized questions.
    </string>
    <string name="rules2_description">
        Every correct answer scores you 5 points.
    </string>
    <string name="rules3_description">
        Every wrong answer deduct you 2 points.
    </string>
    <string name="rules4_description">
        Your results will be saved and will be accumulated in your history.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="privacy_policy_content">

    This Privacy Policy governs the manner in which our Vocab Application collects, uses, maintains, and discloses information collected from users (each, a "User") of the Vocab Application.
    Personal identification information
    We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our app, register on the app, fill out a form, and in connection with other activities, services, features, or resources we make available on our app.
     Non-personal identification information may include the browser name, the type of device, and technical information about Users\' means of connection to our app, such as the operating system and the Internet service providers utilized and other similar information.

    Our Vocab Application has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect.
    By using this app, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our app. Your continued use of the app following the posting of changes to this policy will be deemed your acceptance of those changes.
    This document was last updated on October 27, 2023.
    </string>


</resources>