<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseApplicationType">

    <Button
        android:id="@+id/btn_quiz_app"
        style="@style/GreenButtonStyle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="onStartQuizzApp"
        android:stateListAnimator="@null"
        android:text="@string/text_choose_quiz"
        app:layout_constraintBottom_toTopOf="@+id/btn_vemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_app" />

    <Button
        android:id="@+id/btn_vemo"
        style="@style/YellowButtonStyle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="8dp"
        android:onClick="onStartVemoApp"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@null"
        android:text="@string/text_choose_vocab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_quiz_app" />

    <TextView
        android:id="@+id/tv_choose_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/text_choose_app_vn"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
