<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_logoRays"
        android:layout_width="266dp"
        android:layout_height="239dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/logo_vemo"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_cloudLeft"
        android:layout_marginTop="10dp"
        android:scaleType="centerInside"
        android:translationX="-20dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/cloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/sky_blue" />
    <ImageView
        android:id="@+id/imageView_cloudRight"
        android:layout_marginTop="120dp"
        android:translationX="20dp"
        android:scaleType="centerInside"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPurple" />

    <LinearLayout
        android:id="@+id/linearlayout_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:alpha="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_cloudRight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/textHeadline"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/editTextEmailNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="16dp"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextSdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableStart="@drawable/ic_phone"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="16dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="14sp" />



        <EditText
            android:id="@+id/editTextMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableStart="@drawable/ic_lock_clock"
            android:drawableLeft="@drawable/ic_lock_clock"
            android:drawablePadding="16dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="14sp" />


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_bg"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:backgroundTint="#FFB20C" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/signup_register_button"
        android:textColor="@color/textHeadline"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_inputs" />






</androidx.constraintlayout.widget.ConstraintLayout>